--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -45,6 +45,8 @@ dependencies:
   shared_preferences: ^2.1.1
   motion_toast: ^2.6.7
   flutter_secure_storage: ^8.0.0
+  flutter_multi_formatter: ^2.11.1
+  calendar_view: ^1.0.3
 
 dev_dependencies:
   flutter_test:
