--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -47,6 +47,8 @@ dependencies:
   flutter_secure_storage: ^8.0.0
   flutter_multi_formatter: ^2.11.1
   calendar_view: ^1.0.3
+  file_picker: ^5.3.1
+  intl: ^0.18.1
 
 dev_dependencies:
   flutter_test:
