--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -49,6 +49,9 @@ dependencies:
   calendar_view: ^1.0.3
   file_picker: ^5.3.1
   intl: ^0.18.1
+  table_calendar: ^3.0.9
+  flutter_dialogs: ^3.0.0
+  date_format: ^2.0.7
 
 dev_dependencies:
   flutter_test:
