--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -52,6 +52,8 @@ dependencies:
   table_calendar: ^3.0.9
   flutter_dialogs: ^3.0.0
   date_format: ^2.0.7
+  ionicons: ^0.2.2
+  syncfusion_flutter_calendar: ^21.2.10
 
 dev_dependencies:
   flutter_test:
