--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,6 +30,8 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
+  flutter_localizations:
+    sdk: flutter
 
 
   # The following adds the Cupertino Icons font to your application.
@@ -48,12 +50,15 @@ dependencies:
   flutter_multi_formatter: ^2.11.1
   calendar_view: ^1.0.3
   file_picker: ^5.3.1
-  intl: ^0.18.1
+  intl: ^0.18.0
   table_calendar: ^3.0.9
   flutter_dialogs: ^3.0.0
   date_format: ^2.0.7
   ionicons: ^0.2.2
   syncfusion_flutter_calendar: ^21.2.10
+  dropdown_search: ^3.0.1
+  dropdown_button2: ^1.7.0
+  syncfusion_localizations: ^21.2.10
 
 dev_dependencies:
   flutter_test:
