--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -59,6 +59,7 @@ dependencies:
   dropdown_search: ^3.0.1
   dropdown_button2: ^1.7.0
   syncfusion_localizations: ^21.2.10
+  animated_custom_dropdown: ^1.5.0
 
 dev_dependencies:
   flutter_test:
@@ -86,6 +87,7 @@ flutter:
   assets:
     - assets/icons/
     - assets/images/
+    - assets/teeth/
 
 
   # An image asset can refer to one or more resolution-specific "variants", see
