--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -60,6 +60,7 @@ dependencies:
   dropdown_button2: ^1.7.0
   syncfusion_localizations: ^21.2.10
   animated_custom_dropdown: ^1.5.0
+  url_launcher: ^6.1.11
 
 dev_dependencies:
   flutter_test:
@@ -82,6 +83,7 @@ flutter:
   # included with your application, so that you can use the icons in
   # the material Icons class.
   uses-material-design: true
+
 
   # To add assets to your application, add an assets section, like this:
   assets:
